Changed suffix on dynamic-space-size setting for CI.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,7 +31,7 @@
           "uses": "40ants/setup-lisp@v4",
           "with": {
             "asdf-system": "40ants-bots-docs",
-            "dynamic-space-size": "4G",
+            "dynamic-space-size": "4g",
             "cache": "true"
           }
         },
