--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@
           "uses": "40ants/setup-lisp@v4",
           "with": {
             "asdf-system": "40ants-bots",
-            "dynamic-space-size": "4G",
+            "dynamic-space-size": "4g",
             "cache": "true"
           }
         },
